--- a/stylus/base.styl
+++ b/stylus/base.styl
@@ -18,7 +18,6 @@ body
   width 100%
   min-height 100%
   font-size 62.5%
-  overflow hidden
     
 border-radius(n)
   -webkit-border-radius n
@@ -46,8 +45,7 @@ select::-moz-focus-inner {
   color rgb(90,90,90)
   min-height 100%
   
-.body-wrapper
-  overflow hidden
+
 
 
     
